year lable fixed on mobile

--- a/src/styles/base/_pages.scss
+++ b/src/styles/base/_pages.scss
@@ -622,6 +622,11 @@ body {
     margin-left: 0px;
     width: 140px;
   }
+
+  .year-label {
+    font-size: 1.4rem;
+    text-shadow: 0 1px 8px rgba(164,64,242, 0.8);
+  }
 }
 
 @media only screen and (max-device-width: 1180px) { 
