--- a/src/styles/responsive/_mobile.scss
+++ b/src/styles/responsive/_mobile.scss
@@ -764,6 +764,11 @@
       flex-direction: column;
       margin-top: 12rem;
     }
+
+    .year-label {
+      font-size: 24px;
+      margin-left: 10px;
+    }
   }
 
   .toggle {
